<resources>
    <string name="app_name">Myers Briggs Personality Test</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="startButtonText">Start Test</string>
    <string name="historyButtonText">Test History</string>
    <string name="logoDescription">Application logo</string>
    <string name="test_title">Personality Test</string>
    <string name="testToolbarText">Personality Test</string>
    <string name="historyToolbarText">Test History</string>
    <string name="placeholder">INTJ</string>
    <string name="finish">Finish</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="not_sure">Not Sure</string>
    <string name="disagree">Disagree</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="test_question">TEST QUESTION</string>
    <string name="_2">50% X</string>
    <string name="_1">50% X</string>
    <string name="_3">50% X</string>
    <string name="_4">50% X</string>
    <string name="_50_j">50% J</string>
    <string name="_50_t">50% T</string>
    <string name="_50_n">50% N</string>
    <string name="_50_i">50% I</string>
    <string name="back">Back</string>
    <string name="intj">
        INTJ:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nIntuition (N): People with this trait spend a lot of their time wondering about the world. They often spend time pondering different potential scenarios, even if sometimes they are far fetched and unrealistic. This can lead to them being good innovators due to an ability to think outside the box.\n\nThinking (T): The thinking trait applies to those who like to work with facts and use logical reasoning to approach problems. Those with this trait often find it easier to make decisions on their own, taking an unbiased and reasonable approach and analyzing the decision appropriately.\n\nJudging (J): Those who possess this trait are mostly organized. They enjoy planning and make plans for almost any scenario, then do their best to stick to it. People with this trait also usually have a good work ethic and will usually have a set of goals and always work towards them.\n\nRecommended career paths include: Musician, Teacher, Engineer.\n\n
    </string>
    <string name="intp">
        INTP:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nIntuition (N): People with this trait spend a lot of their time wondering about the world. They often spend time pondering different potential scenarios, even if sometimes they are far fetched and unrealistic. This can lead to them being good innovators due to an ability to think outside the box.\n\nThinking (T): The thinking trait applies to those who like to work with facts and use logical reasoning to approach problems. Those with this trait often find it easier to make decisions on their own, taking an unbiased and reasonable approach and analyzing the decision appropriately.\n\nPerceiving (P): Those who possess this trait prefer to take the world as it comes. They are very flexible and usually can adapt to any situation thrown at them. They can often switch from one hobby or project to another with ease and are very creative individuals.\n\nRecommended career paths include: Composer, Web Developer, Biomedical Engineer.\n\n
    </string>
    <string name="infj">
        INFJ:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nIntuition (N): People with this trait spend a lot of their time wondering about the world. They often spend time pondering different potential scenarios, even if sometimes they are far fetched and unrealistic. This can lead to them being good innovators due to an ability to think outside the box.\n\nFeeling (F): The feeling trait applies to those with a greater emotional awareness. They tend to show a greater amount of empathy for those around them and will usually consider the feelings of others when making their decisions. They are the kind of people who like to follow their hearts.\n\nJudging (J): Those who possess this trait are mostly organized. They enjoy planning and make plans for almost any scenario, then do their best to stick to it. People with this trait also usually have a good work ethic and will usually have a set of goals and always work towards them.\n\nRecommended career paths include: Writer, Scientist, Psychologist.\n\n
    </string>
    <string name="infp">
        INFP:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nIntuition (N): People with this trait spend a lot of their time wondering about the world. They often spend time pondering different potential scenarios, even if sometimes they are far fetched and unrealistic. This can lead to them being good innovators due to an ability to think outside the box.\n\nFeeling (F): The feeling trait applies to those with a greater emotional awareness. They tend to show a greater amount of empathy for those around them and will usually consider the feelings of others when making their decisions. They are the kind of people who like to follow their hearts.\n\nPerceiving (P): Those who possess this trait prefer to take the world as it comes. They are very flexible and usually can adapt to any situation thrown at them. They can often switch from one hobby or project to another with ease and are very creative individuals.\n\nRecommended career paths include: Physical Therapist, Mental Health Worker, Photographer.\n\n
    </string>
    <string name="istj">
        ISTJ:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nSensing (S): People with this trait usually prefer to work with more tangible ideas rather than abstract ones. They are much more likely to focus on the present rather than the past or the future. They tend to take a very practical approach to problem solving.\n\nThinking (T): The thinking trait applies to those who like to work with facts and use logical reasoning to approach problems. Those with this trait often find it easier to make decisions on their own, taking an unbiased and reasonable approach and analyzing the decision appropriately.\n\nJudging (J): Those who possess this trait are mostly organized. They enjoy planning and make plans for almost any scenario, then do their best to stick to it. People with this trait also usually have a good work ethic and will usually have a set of goals and always work towards them.\n\nRecommended career paths include: Dentist, Accountant, Business Analyst.\n\n
    </string>
    <string name="isfp">
        ISFP:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nSensing (S): People with this trait usually prefer to work with more tangible ideas rather than abstract ones. They are much more likely to focus on the present rather than the past or the future. They tend to take a very practical approach to problem solving.\n\nFeeling (F): The feeling trait applies to those with a greater emotional awareness. They tend to show a greater amount of empathy for those around them and will usually consider the feelings of others when making their decisions. They are the kind of people who like to follow their hearts.\n\nPerceiving (P): Those who possess this trait prefer to take the world as it comes. They are very flexible and usually can adapt to any situation thrown at them. They can often switch from one hobby or project to another with ease and are very creative individuals.\n\nRecommended career paths include: Bookkeeper, Optician, Vet.\n\n
    </string>
    <string name="istp">
        ISTP:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nSensing (S): People with this trait usually prefer to work with more tangible ideas rather than abstract ones. They are much more likely to focus on the present rather than the past or the future. They tend to take a very practical approach to problem solving.\n\nThinking (T): The thinking trait applies to those who like to work with facts and use logical reasoning to approach problems. Those with this trait often find it easier to make decisions on their own, taking an unbiased and reasonable approach and analyzing the decision appropriately.\n\nPerceiving (P): Those who possess this trait prefer to take the world as it comes. They are very flexible and usually can adapt to any situation thrown at them. They can often switch from one hobby or project to another with ease and are very creative individuals.\n\nRecommended career paths include: Engineer, Forensic Scientist, Technician.\n\n
    </string>
    <string name="isfj">
        ISFJ:\n\nIntroversion (I): Introverted people prefer to spend time on their own and usually have trouble with handling a lot social interactions. Introvert tend to be introspective and enjoy spending time alone. You may find too much stimulation to be distracting or frustrating.\n\nSensing (S): People with this trait usually prefer to work with more tangible ideas rather than abstract ones. They are much more likely to focus on the present rather than the past or the future. They tend to take a very practical approach to problem solving.\n\nFeeling (F): The feeling trait applies to those with a greater emotional awareness. They tend to show a greater amount of empathy for those around them and will usually consider the feelings of others when making their decisions. They are the kind of people who like to follow their hearts.\n\nJudging (J): Those who possess this trait are mostly organized. They enjoy planning and make plans for almost any scenario, then do their best to stick to it. People with this trait also usually have a good work ethic and will usually have a set of goals and always work towards them.\n\nRecommended career paths include: Accountant, Bank Teller, Administrative Manager.\n\n
    </string>
</resources>